# Neuro-Symbolic-Agent

./: .gitignore  LICENSE  README.md
project/: README.md  pyproject.toml
project/demo/: ARCHITECTURE.md  README.md  ablation.py  arithmetic.py  arithmetic_validation.py  datasets.py  goal_alignment.py  reasoning_stats.py  run_benchmark.py  run_demo.py  run_gsm8k.py  scenarios.py  web_app.py
project/demo/data/: gsm8k_sample.jsonl
project/tests/: conftest.py  test_ablation.py  test_actr_conflict_property.py  test_actr_controller.py  test_actr_retention_property.py  test_actr_rule_selection.py  test_arithmetic.py  test_arithmetic_validation.py  test_baseline_conformance.py  test_baselines.py  test_comparison_report.py  test_config_enum_property.py  test_config_manager.py  test_config_numeric_property.py  test_config_rule_learning_property.py  test_consistency_property.py  test_constrained_decoder.py  test_contradiction_discard_property.py  test_cycle_bound_property.py  test_dataset_loader.py  test_dataset_partition_property.py  test_datasets.py  test_demo_smoke.py  test_disabled_equivalence_property.py  test_evaluation_harness.py  test_evaluation_run_integration.py  test_goal_alignment.py  test_gsm8k_loader.py  test_gsm8k_runner.py  test_induction_accepted_property.py  test_latency_overhead_property.py  test_learned_cap_property.py  test_learned_store_persistence.py  test_learned_store_roundtrip_property.py  test_llm_component.py  test_marker_roundtrip_property.py  test_metrics_bounds_property.py  test_metrics_engine.py  test_models.py  test_numeric_match.py  (+31 more)
(+63 files in other folders)
